--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,19 @@
 @import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
+
+
 @import "./global/header.css";
 
 /* Componentes */
 @import "./utilidades/componentes.css";
 
+
 /* Home */
 @import "./home/introducao.css";
 
+/* Bicicletas */
+@import "./bicicletas/bicicletas-lista.css";
 
 
 
